# perftrace

./: README.rst  pyproject.toml
perftrace/: __main__.py
tests/: test_perftrace.py
