[tool.poetry]
name = "perftrace"
version = "0.1.0"
description = ""
authors = ["Robert Underwood <rr.underwood94@gmail.com>"]

[tool.poetry.scripts]
perftrace = "perftrace.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
